# Lemon-QRMaker

./: .gitignore  README.md  app.py  core.py  example.py  main.old.py  main.py  main_design.py  main_designer.py  main_form.py  main_page.py  pyproject.toml
__pycache__/: main.cpython-312.pyc.1800817406240
docs/: README.md
src/: main.py  main_page.py
src/utils/: qr_core.py
src/widgets/: ColorPicker.py  DateTime.py  Dropdown.py  Radio.py  ShapeButton.py  Tab.py
utils/: color_coverter.py  qr_core.py  qr_extended.py
widgets/: Checkbox.py  ColorPicker.py  Dropdown.py  ShapeButton.py  Tab.py  TextField.py  main_form.py  main_page.py  tabs.py
widgets/common/: Checkbox.py  ColorPicker.py  DateTime.py  Dropdown.py  ShapeButton.py  Tab.py  TextField.py
